# reciprocator

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  main.go  package.json
.github/workflows/: package.yml
go/: go.mod
helpers/: debug.go  file.go  keymap.json  note.go  note_test.go
note/: note.go
public/: electron.js
src/: App.js  file.rs  main.rs
src/Editor/: index.js
src/Engine/: index.js
src/NavPublic/: index.js
src/helpers/: note.rs
src/reciprocator/: event.rs  file.rs  mod.rs  note.rs
