[package]
name = "reciprocator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed="6.4.2"
clap = { version = "4.1.6", features = ["derive"] }

[dependencies.rimd]
git = "https://github.com/RustAudio/rimd.git"
